--- a/src/simple-account-manager/src/app/app.component.html
+++ b/src/simple-account-manager/src/app/app.component.html
@@ -1,1 +1,41 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+    </button>
+    <h1>SAM</h1>
+    <span class="menu-spacer"></span>
+    <div>
+      <button mat-button [routerLink]="'/invoices'" routerLinkActive="selected-nav" class="mx-1"> Invoice </button>
+      <button mat-button [routerLink]="'/invoice-create'" routerLinkActive="selected-nav" class="mx-1"> Create Invoice </button>
+      <button mat-button [routerLink]="'/accounts'" routerLinkActive="selected-nav" class="mx-1"> Accounts </button>
+      <button mat-button [routerLink]="'/account-create'" routerLinkActive="selected-nav" class="mx-1"> Create Account </button>
+      <button mat-button [routerLink]="'/data/export'" routerLinkActive="selected-nav" class="mx-1"> Export </button>
+    </div>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row>
+      <span style="font-size: 12px;">SimpleCRM helps you easily manage your contacts</span>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+
+      <a mat-list-item [routerLink]="'/invoices'"> Invoice </a>
+      <a mat-list-item [routerLink]="'/invoice-create'"> Create Invoice </a>
+      <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
+      <a mat-list-item [routerLink]="'/account-create'"> Create Account </a>
+      <a mat-list-item [routerLink]="'/data/export'"> Export </a>
+      <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 88vh;">
+
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
