create new company added

--- a/src/simple-account-manager/src/styles.scss
+++ b/src/simple-account-manager/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/purple-green.css';
+// @import '@angular/material/prebuilt-themes/purple-green.css';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 .material-icons {
@@ -37,3 +38,8 @@ textarea:focus, input:focus, button:focus{
   border-color: #69f0ae !important;
 }
 // https://stackoverflow.com/questions/45089178/how-to-get-primary-or-accent-color-of-currently-applied-theme-in-angular-materia
+
+
+.full-width {
+  width: 100%;
+}
